<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_a62092f_5395_4505_90b9_f87fb6c0fa62" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="400dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/armored_mole"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="139dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/iniciar_jogo"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/leaderboardsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/placares"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/configura_es"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:theme="@style/CardView.Dark"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="475dp"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/developed_by_brenolves"
        android:textColor="@color/design_default_color_error"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>