<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    tools:context=".SettingsMenu">

    <TextView
        android:id="@+id/settingsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="375dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/configura_es"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/defaultName"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/defaultNameTxt"
                android:layout_width="100px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/nome_padr_o"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editDefNameTxt"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="5"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/saveDefNameBtn"
                android:layout_width="120px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/salvar"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:orientation="horizontal"
            android:paddingBottom="20px"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/boardSizeTxt"
                android:layout_width="100px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/tamanho_do_tabuleiro"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Spinner
                android:id="@+id/editBoardSizeSpn"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FAFAFA"
                android:fontFamily="sans-serif-condensed-medium" />

            <Button
                android:id="@+id/saveBoardSizeBtn"
                android:layout_width="120px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/salvar"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="1dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>